--- a/categories/templates/categories/category_form.html
+++ b/categories/templates/categories/category_form.html
@@ -3,7 +3,10 @@
 
 {% block content %}
 <div class="d-flex justify-content-between">
-    <h1 class="h3 mb-4 text-gray-800">Nova Categoria</h1>
+    <h1 class="h3 mb-4 text-gray-800">
+        {% if request.resolver_match.url_name == 'create' %} Nova  {% else %} Editar {% endif %}
+        Categoria
+    </h1>
     <div>
         <a href="{% url 'categories:list' %}" class="btn btn-primary shadow">
             <i class="fas fa-list"></i> Ver categorias
