--- a/categories/templates/categories/category_list.html
+++ b/categories/templates/categories/category_list.html
@@ -14,51 +14,70 @@
     <div class="col-12">
         <div class="card shadow">
             <div class="card-header">
-
+                <div class="row">
+                    <div class="col-12 col-md-8"></div>
+                    <div class="col-12 col-md-4">
+                        <form method="get" class="form-inline float-right">
+                            <div class="input-group">
+                                <input type="text" class="form-control" 
+                                    placeholder="Pesquisar" name="search">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary" type="submit">
+                                        <i class="fas fa-search"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-hover">
                         <thead>
                             <tr>
                                 <th>Nome</th>
                                 <th>Data de criação</th>
+                                <th>Data de atualização</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for category in object_list %}
-                                <tr>
-                                    <td>{{ category.name }}</td>
-                                    <td>{{ category.created_at }}</td>
-                                    <td>
-                                        <div>
-                                            <a href="#" class="btn btn-primary">
-                                                <i class="fas fa-eye"></i>
-                                            </a>
-
-                                            <a href="#" class="btn btn-warning">
-                                                <i class="fas fa-edit"></i>
-                                            </a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            {% empty %}
-                                <tr>
-                                    <td class="text-center" colspan="100%">
-                                        Nenhum dado cadastrado
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="card-footer">
-
-            </div>
+                            <tr>
+                                <td>{{ category.name }}</td>
+                                <td>{{ category.created_at }}</td>
+                                <td>{{ category.updated_at }}</td>
+                                <td>
+                                    <div>
+                                        <a href="{% url 'categories:update' category.pk %}" 
+                                            class="btn btn-warning btn-sm">
+                                            <i class="fas fa-edit"></i>
+                                        </a>
+                                        <button type="button" class="btn btn-danger btn-sm"
+                                            data-toggle="modal" data-target="#deleteModal{{category.pk}}">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                        {% include 'categories/components/category_delete_modal.html' %}
+                                    </div>
+                                </td>
+                            </tr>
+                    {% empty %}
+                    <tr>
+                        <td class="text-center" colspan="100%">
+                            Nenhum dado cadastrado
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
+    <div class="card-footer">
+        
+    </div>
+</div>
+</div>
 </div>
 
 {% endblock %}
