--- a/core/templates/partials/sidebar.html
+++ b/core/templates/partials/sidebar.html
@@ -39,6 +39,13 @@
             <span>Categorias</span>
         </a>
     </li>
+
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'brands:list' %}">
+            <i class="fas fa-fw fa-tag"></i>
+            <span>Marcas</span>
+        </a>
+    </li>
     
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
