--- a/core/templates/loaders/scripts.html
+++ b/core/templates/loaders/scripts.html
@@ -9,3 +9,7 @@
 
 <!-- Custom scripts for all pages-->
 <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
+
+<script src="{% static 'vendor/select2/select2.min.js' %}"></script>
+
+<script src="{% static 'js/custom.js' %}"></script>
