--- a/core/templates/loaders/styles.html
+++ b/core/templates/loaders/styles.html
@@ -6,4 +6,7 @@
 
 <!-- Custom styles for this template-->
 <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'vendor/select2/select2.min.css' %}">
+<link rel="stylesheet" href="{% static 'vendor/select2/select2-theme-bootstrap4.min.css' %}">
+
 <link rel="stylesheet" href="{% static 'css/custom.css' %}">
