--- a/core/templates/partials/sidebar.html
+++ b/core/templates/partials/sidebar.html
@@ -27,7 +27,7 @@
     
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'products:list' %}">
             <i class="fas fa-fw fa-box"></i>
             <span>Produtos</span>
         </a>
