--- a/core/templates/partials/sidebar.html
+++ b/core/templates/partials/sidebar.html
@@ -1,18 +1,18 @@
 <!-- Sidebar -->
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-    
+
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" 
-        href="{% url 'accounts:home' %}">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center"
+       href="{% url 'accounts:home' %}">
         <div class="sidebar-brand-icon">
             <i class="fas fa-flask"></i>
         </div>
         <div class="sidebar-brand-text mx-3">Ilha <strong>Stock</strong></div>
     </a>
-    
+
     <!-- Divider -->
     <hr class="sidebar-divider my-0">
-    
+
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
         <a class="nav-link" href="{% url 'accounts:home' %}">
@@ -20,40 +20,51 @@
             <span>Área de trabalho</span>
         </a>
     </li>
-    
+
     <!-- Divider -->
     <hr class="sidebar-divider">
-    
-    
+
+
     <!-- Nav Item - Charts -->
+    <li class="nav-item {% if request.resolver_match.app_name == 'stock' %} active {% endif %}">
+        <a class="nav-link" href="{% url 'stock:list' %}">
+            <i class="fas fa-fw fa-pallet"></i>
+            <span>Estoque</span>
+        </a>
+    </li>
+
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'products:list' %}">
-            <i class="fas fa-fw fa-box"></i>
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+            <i class="fas fa-fw fa-boxes"></i>
             <span>Produtos</span>
         </a>
+        <div id="collapseTwo" class="collapse
+        {% if request.resolver_match.app_name == 'products' or request.resolver_match.app_name == 'categories' or request.resolver_match.app_name == 'brands' %}
+        show
+        {% endif %}
+        " aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <h6 class="collapse-header">Gestão de produtos</h6>
+                <a class="collapse-item {% if request.resolver_match.app_name == 'products' %} active {% endif %}" href="{% url 'products:list' %}">
+                    <span>Produtos</span>
+                </a>
+                <a class="collapse-item {% if request.resolver_match.app_name == 'categories' %} active {% endif %}" href="{% url 'categories:list' %}">
+                    <span>Categorias</span>
+                </a>
+                 <a class="collapse-item {% if request.resolver_match.app_name == 'brands' %} active {% endif %}" href="{% url 'brands:list' %}">
+                    <span>Marcas</span>
+                </a>
+            </div>
+        </div>
     </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'categories:list' %}">
-            <i class="fas fa-fw fa-tags"></i>
-            <span>Categorias</span>
-        </a>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'brands:list' %}">
-            <i class="fas fa-fw fa-tag"></i>
-            <span>Marcas</span>
-        </a>
-    </li>
-    
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
-    
+
     <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline">
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
     </div>
-    
+
 </ul>
 <!-- End of Sidebar -->
