--- a/stock/templates/stock/stock_list.html
+++ b/stock/templates/stock/stock_list.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class="d-flex justify-content-between">
-    <h1 class="h3 mb-4 text-gray-800">Produtos</h1>
+    <h1 class="h3 mb-4 text-gray-800">Estoque</h1>
     <div>
-        <a href="{% url 'products:create' %}" class="btn btn-success shadow">
-            <i class="fas fa-plus"></i> Novo Produto
+        <a href="{% url 'stock:create' %}" class="btn btn-success shadow">
+            <i class="fas fa-plus"></i> Lançar produto em estoque
         </a>
     </div>
 </div>
@@ -38,27 +38,30 @@
                             <tr>
                                 <th>Nome</th>
                                 <th>Categoria</th>
-                                <th>Data de criação</th>
+                                <th>Marca</th>
+                                <th>Quantidade</th>
+                                <th>Preço</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for product in object_list %}
+                            {% for stock in object_list %}
                             <tr>
-                                <td>{{ product.name }}</td>
-                                <td>{{ product.category.name }}</td>
-                                <td>{{ product.created_at }}</td>
+                                <td>{{ stock.product.name }}</td>
+                                <td>{{ stock.product.category.name }}</td>
+                                <td>{{ stock.brand.name }}</td>
+                                <td>{{ stock.quantity }}</td>
+                                <td>R$ {{ stock.price }}</td>
                                 <td>
                                     <div>
-                                        <a href="{% url 'products:update' product.pk %}"
+                                        <a href="{% url 'stock:update' stock.pk %}"
                                             class="btn btn-warning btn-sm">
                                             <i class="fas fa-edit"></i>
                                         </a>
-                                        <button type="button" class="btn btn-danger btn-sm"
-                                            data-toggle="modal" data-target="#deleteModal{{product.pk}}">
-                                            <i class="fas fa-trash"></i>
-                                        </button>
-                                        {% include 'products/components/product_delete.html' %}
+                                        <a href="{% url 'stock:sub' stock.pk %}"
+                                            class="btn btn-dark btn-sm">
+                                            <i class="fas fa-arrow-alt-circle-down"></i>
+                                        </a>
                                     </div>
                                 </td>
                             </tr>
